<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">RockPaperScissor</string>
    <string name="action_settings">Settings</string>
    <string name="username">Username</string>
    <string name="age">Age</string>
    <string name="sex">Sex</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="ok">Start the Game</string>
    <string name="hint_username">Type username</string>
    <string name="hint_age">Type age</string>
    <string name="title_activity_game">GameActivity</string>
    <string name="hello_world">Hello world!</string>

</resources>
