<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="mc.assign1.rockpaperscissor.MainActivity" >

    <TextView
        android:id="@+id/loss"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="26dp"
        android:layout_marginTop="62dp"
        android:text="@string/username" />

    <TextView
        android:id="@+id/win"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/loss"
        android:layout_below="@+id/loss"
        android:layout_marginTop="36dp"
        android:inputType="number"
        android:text="@string/age" />

    <TextView
        android:id="@+id/draw"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/ok"
        android:layout_alignRight="@+id/win"
        android:layout_marginBottom="20dp"
        android:text="@string/sex" />

    <EditText
        android:id="@+id/inputUserName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/win"
        android:layout_alignLeft="@+id/ok"
        android:ems="10"
        android:hint="@string/hint_username" />
    
    <EditText
        android:id="@+id/inputAge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/win"
        android:layout_alignLeft="@+id/inputUserName"
        android:ems="10"
        android:hint="@string/hint_age"
        android:inputType="number"
        android:maxLength="@integer/two" />

    <RadioGroup
        android:id="@+id/radioSex"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/inputAge"
        android:layout_below="@+id/inputAge"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="20dp" >

        <RadioButton
            android:id="@+id/male"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/male" />

        <RadioButton
            android:id="@+id/female"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/female" />

    </RadioGroup>

    <Button
        android:id="@+id/ok"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/radioSex"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="44dp"
        android:text="@string/ok" />

</RelativeLayout>
